# upwork

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  setup-guide.md
portfolio/sample-project/: README.md
scripts/: setup.sh
src/: __init__.py  utils.py
tests/: __init__.py  test_utils.py
vscode-mcp-server/: DEPLOYMENT.md  README.md  VERIFICATION.md  esbuild.js  package-lock.json  package.json
vscode-mcp-server/src/: extension.ts  mcp-server.ts
